--- a/elcora_fast/pubspec.yaml
+++ b/elcora_fast/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   
   # Real-time communication
   agora_rtc_engine: ^6.3.0
-  socket_io_client: ^3.1.3
+  # socket_io_client removed - using Supabase Realtime
   url_launcher: ^6.3.0
   
   # Location & Maps
@@ -85,6 +85,8 @@ dependencies:
 
   # Package info (dépendance transitive requise par d'autres packages)
   package_info_plus: ^8.0.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
   http: any
   path: any
@@ -92,6 +94,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
